REGRESSION(r224516): Remote WebGL Context is not create due to RemoteRenderingBackend not being created https://bugs.webkit.org/show_bug.cgi?id=224751

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-04-20
Reviewed by Chris Dumez.

Fix WebGL GPU process after r275922.

RemoteRenderingBackend must be created so that RemoteGraphicsContextGL
can take a reference of it.

Fixes layout test failures when run with --gpu-process.

* WebProcess/GPU/graphics/RemoteRenderingBackendProxy.cpp:
(WebKit::RemoteRenderingBackendProxy::ensureBackendCreated):
* WebProcess/GPU/graphics/RemoteRenderingBackendProxy.h:
* WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::createGraphicsContextGL const):

Canonical link: https://commits.webkit.org/236770@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276288 268f45cc-cd09-0410-ab3c-d52691b4dbfc